Give image a heigh to prevent layout shift

--- a/frontend/styles/pages/_home.scss
+++ b/frontend/styles/pages/_home.scss
@@ -7,4 +7,5 @@
 		margin: 0 auto;
 		border-radius: 5px;
 		width: 200px;
+		height: 215px;
 	}
